# 3RGaussian

./: .gitignore  CMakeLists.txt  README.md
man_controller/: CMakeLists.txt  package.xml
man_controller/GPMatlab/Double Pendulum/: DOUBLE_PENDULUM_DERIVATION.mlx  DOUBLE_PENDULUM_EOM.m  double_pendulum.mlx  kernel.m  uncertainty.m
man_controller/GPMatlab/Hyperparameter/: test.cpp
man_controller/GP_Testing/Double Pendulum/: EOM_spatial_3R.mlx  double_pendulum_GP.m  kernel.asv  rk4singlestep.m
man_controller/GP_Testing/Hyperparameter/: test_ceres.cpp  tutorial
man_controller/GP_Testing/nlopt_gp/: CMakeLists.txt  gp_fit.py  modern  test.cpp
man_controller/eom/src/: 3RDyn.py  3RDynamics.txt  Dynamics.m  Matrices.txt  Transformation.py  acceleration.txt  eom.py  lagrangian_eom.py  lagrangian_helper.py  man_IK_control.cpp  output.txt  position.txt  ref_trajectory.py  velocity.txt
man_controller/eom/src/2RMan/: Transformation.py  eom.py  lagrangian_eom.py  lagrangian_helper.py  output.txt
man_controller/eom/src/urdf2eom/: tau.txt
man_controller/eom/src/urdf2eom/URDFs/: manipulator.urdf  manipulator.xacro
man_controller/man_description/: CTestTestfile.cmake  Makefile  cmake_install.cmake
man_controller/man_description/catkin_generated/: ordered_paths.cmake  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
man_controller/man_description/catkin_generated/installspace/: man_description.pc  man_descriptionConfig.cmake
man_controller/msg/: FloatArray.msg  Traj.msg
man_controller/plugins/: CMakeLists.txt
man_controller/plugins/src/: ff_torque.cpp  ff_torque.h  gp.cpp  gp.h  gp_node.py  motor_control.cc  motor_control_dist.cc  pin_3r.cpp
man_controller/src/: ff_torque.cpp  ff_torque.h  gp_node.py  gp_node_0.py  gp_node_1.py  gp_node_2.py  reference_traj.cpp  reference_traj.py
man_description/: CMakeLists.txt  package.xml
man_description/config/: joints.yaml
man_description/launch/: backup  config.rviz  estimation.launch  inv_dyn.launch  rviz.launch  spawn.launch
man_description/urdf/: link_files.xacro  manipulator.xacro  manipulator_backup.xacro
